--- a/Presentation/ECommerceAPI.API/Properties/launchSettings.json
+++ b/Presentation/ECommerceAPI.API/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "ECommerceAPI.API": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7158;http://localhost:5158",
       "environmentVariables": {
