--- a/Presentation/ECommerceAPI.API/appsettings.json
+++ b/Presentation/ECommerceAPI.API/appsettings.json
@@ -1,12 +1,17 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "PostgreSQL": "User ID=postgres;Password=123456;Host=localhost;Port=5432;Database=ECommerceAPIDb;"
+    },
+    "Storage": {
+        "Azure": "",
+        "AWS": "",
+        "Google": ""
     }
-  },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "PostgreSQL": "User ID=postgres;Password=123456;Host=localhost;Port=5432;Database=ECommerceAPIDb;"
-  }
 }
