--- a/Presentation/ECommerceAPI.API/appsettings.json
+++ b/Presentation/ECommerceAPI.API/appsettings.json
@@ -10,6 +10,7 @@
         "PostgreSQL": "User ID=postgres;Password=123456;Host=localhost;Port=5432;Database=ECommerceAPIDb;"
     },
     "Storage": {
+        "BaseUrl": "https://localhost:7158/",
         "Azure": "",
         "AWS": "",
         "Google": ""
