Adding JWT bearer

--- a/Presentation/ECommerceAPI.API/appsettings.json
+++ b/Presentation/ECommerceAPI.API/appsettings.json
@@ -14,5 +14,11 @@
         "Azure": "",
         "AWS": "",
         "Google": ""
+    },
+    "Token": {
+        "Audience": "www.merhaba.com",
+        "Issuer": "www.myapi.com",
+        "SecurityKey": "mysymmetrickeymysymmetrickeymysymmetrickeymysymmetrickey",
+        "ExpirationMinutes": 5
     }
 }
