code refactor | jwt expiration & added refresh token

--- a/Presentation/ECommerceAPI.API/appsettings.json
+++ b/Presentation/ECommerceAPI.API/appsettings.json
@@ -7,7 +7,7 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "PostgreSQL": "User ID=postgres;Password=123456;Host=localhost;Port=5432;Database=ECommerceAPIDb;"
+        "PostgreSQL": "User ID=postgres;Password=postgres;Host=localhost;Port=5432;Database=ECommerceAPIDb;"
     },
     "Storage": {
         "BaseUrl": "https://localhost:7158/",
@@ -19,6 +19,16 @@
         "Audience": "www.merhaba.com",
         "Issuer": "www.myapi.com",
         "SecurityKey": "mysymmetrickeymysymmetrickeymysymmetrickeymysymmetrickey",
-        "ExpirationMinutes": 5
+        "ExpirationSeconds": 15
+    },
+    "ExternalLoginSettings": {
+        "Facebook": {
+            "Client_ID": "3278540179047559",
+            "Client_Secret": "8a143145aa24544aca028fecfcd50f56"
+
+        },
+        "Google": {
+            "Client_ID": "544170587397-irgcfffm987ckuguk3b7vrt450oe9b15.apps.googleusercontent.com"
+        }
     }
 }
