--- a/Infrastructure/ECommerceAPI.Persistence/ECommerceAPI.Persistence.csproj
+++ b/Infrastructure/ECommerceAPI.Persistence/ECommerceAPI.Persistence.csproj
@@ -15,7 +15,8 @@
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
-    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.7" />
+      <PackageReference Include="Google.Apis.Auth" Version="1.57.0" />
+      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.7" />
   </ItemGroup>
 
   <ItemGroup>
