added sink | seq

--- a/Presentation/ECommerceAPI.API/appsettings.json
+++ b/Presentation/ECommerceAPI.API/appsettings.json
@@ -19,7 +19,7 @@
         "Audience": "www.merhaba.com",
         "Issuer": "www.myapi.com",
         "SecurityKey": "mysymmetrickeymysymmetrickeymysymmetrickeymysymmetrickey",
-        "ExpirationSeconds": 15
+        "ExpirationSeconds": 2700
     },
     "ExternalLoginSettings": {
         "Facebook": {
@@ -30,5 +30,8 @@
         "Google": {
             "Client_ID": "544170587397-irgcfffm987ckuguk3b7vrt450oe9b15.apps.googleusercontent.com"
         }
+    },
+    "Seq": {
+        "ServerURL": "http://localhost:5341"
     }
 }
