Mail Servisin Kodlanması

--- a/Presentation/ECommerceAPI.API/appsettings.json
+++ b/Presentation/ECommerceAPI.API/appsettings.json
@@ -33,5 +33,11 @@
     },
     "Seq": {
         "ServerURL": "http://localhost:5341"
+    },
+    "MailService": {
+        "Port": 587,
+        "Host": "smtp.gmail.com",
+        "Username": "bertandeniz7@gmail.com",
+        "Password": "osdueidtwbzjaamo" //https://myaccount.google.com/apppasswords
     }
 }
