--- a/Presentation/ECommerceAPI.API/appsettings.json
+++ b/Presentation/ECommerceAPI.API/appsettings.json
@@ -39,5 +39,6 @@
         "Host": "smtp.gmail.com",
         "Username": "bertandeniz7@gmail.com",
         "Password": "osdueidtwbzjaamo" //https://myaccount.google.com/apppasswords
-    }
+    },
+    "AngularClientUrl":  "http://localhost:4200"
 }
