--- a/Infrastructure/ECommerceAPI.Infrastructure/ECommerceAPI.Infrastructure.csproj
+++ b/Infrastructure/ECommerceAPI.Infrastructure/ECommerceAPI.Infrastructure.csproj
@@ -17,6 +17,7 @@
   <ItemGroup>
     <PackageReference Include="Azure.Storage.Blobs" Version="12.13.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.9" />
+    <PackageReference Include="QRCoder" Version="1.4.3" />
   </ItemGroup>
 
 </Project>
